# Memory-Allocator

./: .gitignore  CMakeLists.txt  README.md  bench_results.txt
.vsc/: c_cpp_properties.json
benchmarks/: allocator_bench.cpp
include/: memory_allocator.hpp
src/: memory_allocator.cpp
tests/: allocator_test.cpp
